# ecc2

./: Cargo.toml
halo2-lib/: Cargo.toml
halo2-lib/halo2-base/src/gates/: range.rs
halo2-lib/halo2-ecc/src/bn254/tests/: pairing.rs
halo2-lib/halo2-ecc/src/fields/: fp12.rs  fp2.rs
halo2-lib/hashes/zkevm-keccak/src/: keccak_packed_multi.rs
halo2-lib/hashes/zkevm-keccak/src/keccak_packed_multi/: tests.rs
snark-verifier/snark-verifier/: Cargo.toml
snark-verifier/snark-verifier-sdk/: Cargo.toml
snark-verifier/snark-verifier-sdk/benches/: standard_plonk.rs  zkevm.rs
snark-verifier/snark-verifier-sdk/examples/: zkevm.rs
snark-verifier/snark-verifier/examples/: evm-verifier-with-accumulator.rs
snark-verifier/snark-verifier/src/: lib.rs
snark-verifier/snark-verifier/src/loader/halo2/: shim.rs
src/: bls_verify.rs  ecc_circuit.rs  lib.rs  map_to_curve.rs  map_to_curve_test.rs  mycircuit.rs  pairing.rs  poseidon_test.rs  rlc.rs
src/keccak/: mod.rs  tests.rs
