[package]
name = "ecc-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { path = "./halo2-lib/halo2-base", default-features = false}
halo2-ecc = { path = "./halo2-lib/halo2-ecc", default-features = false}

snark-verifier = { path = "./snark-verifier/snark-verifier", default-features = false, features = ["loader_halo2"], optional = true }
snark-verifier-sdk = { path = "../ecc-playground/snark-verifier/snark-verifier-sdk", default-features = false, features = ["loader_halo2"], optional = true }

zkevm-keccak = {path="./halo2-lib/hashes/zkevm-keccak", default-features = false}
poseidon = {path="./halo2-lib/hashes/poseidon", default-features = false}

rand="0.8"
itertools = "0.10"
lazy_static = "1.4.0"
rayon = "1.6.1"
ark-std = { version = "0.4.0" }
clap = { version = "4.0.13", features = ["derive"], optional = true }
clap-num = { version = "1.0.2", optional = true }
bincode = { version = "1.3.3", optional = true }
base64 = { version = "0.21", optional = true }
serde_with = { version = "2.2", optional = true }
log = "0.4"
env_logger = "0.10"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
ethereum-types = "0.14.1"
ethers-core = { version = "1.0.2" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

ark-ff = "0.4.2"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
hex = "0.4.3"

[dev-dependencies]
test-log = "0.2.11"

[features]
default = ["evm", "aggregation", "clap", "halo2-axiom", "halo2-base/jemallocator"]
aggregation = ["dep:snark-verifier", "snark-verifier-sdk"]
evm = ["snark-verifier-sdk?/loader_evm", "aggregation"]
display = ["zkevm-keccak/display", "snark-verifier-sdk?/display"]
clap = ["dep:clap", "dep:clap-num"]
halo2-axiom = ["zkevm-keccak/halo2-axiom", "snark-verifier-sdk?/halo2-axiom"]

# Dev / testing mode. We make opt-level = 3 to improve proving times (otherwise it is really slow)
[profile.dev]
opt-level = 3
debug = 1 # change to 0 or 2 for more or less debug info
overflow-checks = true # default
incremental = true # default

# Local "release" mode, more optimized than dev but faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 3
# Set this to 1 or 2 to get more useful backtraces
debug = 1
debug-assertions = false
panic = 'unwind'
# better recompile times
incremental = true
lto = "thin"
codegen-units = 16

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
lto = "fat"
panic = "abort"
incremental = false
